# laser_point_det

bin2pcd_data/: .Readme.md.swp  1.pcd  2.pcd  CMakeLists.txt  Readme.md  bin2pcd.cpp  run.sh
bin<=>pcd/: run.sh
bin<=>pcd/python_bin2pcd/: pcd2bin.py
bin<=>pcd/python_bin2pcd/velodyne_bin/: show.py
bin<=>pcd/python_bin2pcd/velodyne_pcd/: 000000.pcd
bin<=>pcd/velodyne_pcd/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  000005.pcd
cloud_to_voxel/: .point_to_voxel.py.swp  .~lock.voxel1.csv#  point_to_voxel.py  show.py  untitled0.py  voxel1.csv
open3d_show_point/: b1.pcd  main.py
pcd_mess/: .a.pcd.swp  CMakeLists.txt  a.pcd  main.cpp  read_pcd.py
python_read_pcd/: .a1.pcd.swp  .b1.pcd.swp  a1.pcd  read_pcd.py
show_bin/: show.py
